--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Calculadora</title> 
-        <link rel="stylesheet" type="text/css" href="calculadora.css" />
+        <link rel="stylesheet" type="text/css" href="stilos.css" />
         <script type="text/javascript" src="calculadora.js"></script>
     </head>
     <body>
@@ -10,16 +10,15 @@
             <form action="#" name="calculadora" id="calculadora">
                 <p id="textoPantalla">0</p>
                 <p>
-                    <input type="button" class="largo" value="Retr" onclick="retro()"/>
                     <input type="button" class="largo" value="CE" onclick="borradoParcial()"  />
                     <input type="button" class="largo" value="C" onclick="borradoTotal()"  />
                 </p>
                 <p>
-                    <input type="button" value="7" onclick="numero(7)" />
+                   <input type="button" value="7" onclick="numero(7)" />
                     <input type="button" value="8" onclick="numero('8')" />
                     <input type="button" value="9" onclick="numero('9')" />
                     <input type="button" value="/" onclick="operar('/')"  />
-                    <input type="button" value="Raiz" onclick="raizc()" />
+                    <input type="button" value="√ " onclick="raizc()" />
                 </p>
                 <p>
                     <input type="button" value="4" onclick="numero('4')" />
