--- a/Formulario de validacion/index.html
+++ b/Formulario de validacion/index.html
@@ -10,17 +10,7 @@
 	
 </head>
 <body>
-	<section class="form_wrap">
-		<section class="contact_info">
-			<section class="info_title">
-				<span class="fa fa-user-circle"></span>
-				<h2>INFORMACION<br>DE CONTACTO</h2>
-			</section> 
-			<section class="info_items">
-				<p><span class="fa fa-envelope"></span> info.contact@gmail.com</p>
-				<p><span class="fa fa-mobile"></span> +1(585) 902-8665</p>
-			</section>
-		</section>
+	<section >
 		<form action="" class="form_contact" method="POST" onsubmit="return validarCamposObligatorios ()">
 			<div class="user_info">
                 
