--- a/Formulario de validacion/index.html
+++ b/Formulario de validacion/index.html
@@ -4,21 +4,18 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta charset="UTF-8">
 	<title>Formulario de Contacto</title>
-
 	<script type="text/javascript" src="valida.js"></script>
-
-	
 </head>
 <body>
 	<section >
-		<form action="" class="form_contact" method="POST" onsubmit="return validarCamposObligatorios ()">
-			<div class="user_info">
+		<form action="" method="POST" onsubmit="return validarCamposObligatorios ()">
+			<div>
                 
                 <label for="cedula">Cedula</label>
                 <input type="text" id="cedula" placeholder="INGRESE SU CÉDULA" maxlength="10" onkeypress="return soloNumeros(event)" onKeyUp="cedulaEC('cedula');">
 
 				<label for="names">Nombres *</label>
-                <input type="text" id="nombre" size="2" onKeyUp="dosPalabrasN('nombre');" placeholder="ANA ISABEL" onkeypress="return sololetras(event)">
+                <input type="text" id="nombre" size="2" onKeyUp="dosPalabrasN('nombre');" placeholder="nombre1 nombre2" onkeypress="return sololetras(event)">
 			
 
                 <label for="apellidos">Apellidos *</label>
