--- a/Formulario de validacion/index.html
+++ b/Formulario de validacion/index.html
@@ -11,23 +11,23 @@
 		<form action="" method="POST" onsubmit="return validarCamposObligatorios ()">
 			<div>
                 
-                <label for="cedula">Cedula</label>
+                <label for="cedula">Cedula*</label>
                 <input type="text" id="cedula" placeholder="INGRESE SU CÉDULA" maxlength="10" onkeypress="return soloNumeros(event)" onKeyUp="cedulaEC('cedula');">
                 <br>
-				<label for="names">Nombres *</label>
-                <input type="text" id="nombre" size="2" onKeyUp="dosPalabrasN('nombre');" placeholder="nombre1 nombre2" onkeypress="return sololetras(event)">
+				<label for="names">Nombres*</label>
+                <input type="text" id="nombre" size="10" onKeyUp="dosPalabrasN('nombre');" placeholder="nombre1 nombre2" onkeypress="return sololetras(event)">
                 <br>
-                <label for="apellidos">Apellidos *</label>
+                <label for="apellidos">Apellidos*</label>
                 <input type="text" id="apellido" onkeypress="return sololetras(event)">
                 <br>
-                <label for="direccion">Direccion </label>
+                <label for="direccion">Direccion*</label>
                 <input type="text" id="direccion" placeholder="INGRESE SU DIRECCION">
                 <br>
-				<label for="phone">Telefono / Celular</label >
+				<label for="phone">Celular*</label >
                 <input type="text" id="phone" placeholder="INGRESE SU TELEFONO" maxlength="10" onkeypress="return soloNumeros(event)"> 
                 <br>
-                <label for="fechaNac">Fecha Nacimiento</label>
-                <input type="text" id="fechaNac" placeholder="DDMMYYYY" maxlength="8" onkeypress="return soloNumeros(event)" onKeyUp="ValidarFecha('fechaNac');">
+                <label for="fechaNac">Fecha Nacimiento*</label>
+                <input type="text" id="fechaNac" placeholder="DD/MM/YYYY" maxlength="10" onkeypress="return soloNumeros(event)" onKeyUp="ValidarFecha('fechaNac');">
                 <br>
 				<div id="Mensaje"></div>
                 
