--- a/Calculadora en PHP/calculadora.html
+++ b/Calculadora en PHP/calculadora.html
@@ -19,7 +19,8 @@
 <tr><td colspan=6>
 <table  border=0 cellpadding=0>
 <tr><td>
-<input type="button" name="CE" class="red" value=" CE " onClick="borrar;  return false;"> <input type="reset" name="C" class="red" value="  C  " onClick="ClearCalc(); return false;">
+<input type="button" name="CE" class="red" value=" CE " onClick="borrado();  return false;"> <input type="reset" 
+name="C" class="red" value="  C  " onClick="borrado(); return false;">
 </td></tr>
 </table>
 </td></tr>
