--- a/Formulario de validacion/index.html
+++ b/Formulario de validacion/index.html
@@ -5,26 +5,27 @@
 	<meta charset="UTF-8">
 	<title>Formulario de Contacto</title>
 	<script type="text/javascript" src="valida.js"></script>
+	<link rel="stylesheet" href="estilos.css">
 </head>
 <body>
 	<section >
-		<form action="" method="POST" onsubmit="return validarCamposObligatorios ()">
+		<form action="" method="POST" onsubmit="return camposNoVacios ()">
 			<div>
                 
                 <label for="cedula">Cedula*</label>
-                <input type="text" id="cedula" placeholder="INGRESE SU CÉDULA" maxlength="10" onkeypress="return soloNumeros(event)" onKeyUp="cedulaEC('cedula');">
+                <input type="text" id="cedula" size="23" placeholder="INGRESE SU CÉDULA" maxlength="10" onkeypress="return soloNumeros(event)" onKeyUp="ValidarCedula('cedula');">
                 <br>
 				<label for="names">Nombres*</label>
-                <input type="text" id="nombre" size="10" onKeyUp="dosPalabrasN('nombre');" placeholder="nombre1 nombre2" onkeypress="return sololetras(event)">
+                <input type="text" id="nombre" size="21"  placeholder="NOMBRES" onkeypress="return sololetras(event)">
                 <br>
                 <label for="apellidos">Apellidos*</label>
-                <input type="text" id="apellido" onkeypress="return sololetras(event)">
+                <input type="text" id="apellido" placeholder="APELLIDOS" onkeypress="return sololetras(event)">
                 <br>
                 <label for="direccion">Direccion*</label>
                 <input type="text" id="direccion" placeholder="INGRESE SU DIRECCION">
                 <br>
 				<label for="phone">Celular*</label >
-                <input type="text" id="phone" placeholder="INGRESE SU TELEFONO" maxlength="10" onkeypress="return soloNumeros(event)"> 
+                <input type="text" id="phone" size="23" placeholder="INGRESE SU # CELULAR" maxlength="10" onkeypress="return soloNumeros(event)"> 
                 <br>
                 <label for="fechaNac">Fecha Nacimiento*</label>
                 <input type="text" id="fechaNac" placeholder="DD/MM/YYYY" maxlength="10" onkeypress="return soloNumeros(event)" onKeyUp="ValidarFecha('fechaNac');">
