--- a/Calculadora en PHP/calculadora.html
+++ b/Calculadora en PHP/calculadora.html
@@ -1,13 +1,15 @@
-<!DOCTYPE html >
+<!DOCTYPE html  >
 <html>
 <head>
 <title>Calculadora</title> 
+<meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="calculadora.css" />
 <script type="text/javascript" src="calculadora.js"></script>
 </head>
 <body>
 </p>
-<center>
+
+
 <form name="calculator">
 <tr><td>
 <tr><td>
@@ -19,31 +21,32 @@
 <tr><td colspan=6>
 <table  border=0 cellpadding=0>
 <tr><td>
-<input type="button" name="CE" class="red" value=" CE " onClick="borrado();  return false;"> <input type="reset" 
-name="C" class="red" value="  C  " onClick="borrado(); return false;">
+<input type="button" name="CE"  value=" CE " onClick="borrado();  return false;"> 
+<input type="reset" name="C" value="  C  " onClick="borrado(); return false;">
+<input type="button" name="cuadra" value="   ²  " onClick="cuadrado(); return false;">
 </td></tr>
 </table>
 </td></tr>
-<td><input type="button" name="n7" class="blue" value="  7  " onClick="setNum('7'); return false;"></td>
-<td><input type="button" name="n8" class="blue" value="  8  " onClick="setNum('8'); return false;"></td>
-<td><input type="button" name="n9" class="blue" value="  9  " onClick="setNum('9'); return false;"></td>
-<td><input type="button" name="divide" class="red" value="  /  " onClick="division(1); return false;"></td>
-<td><input type="button" name="sqrt" class="blue" value="   √  " onClick="raiz(); return false;"></td></tr>
-<td><input type="button" name="n4" class="blue" value="  4  " onClick="setNum('4'); return false;"></td>
-<td><input type="button" name="n5" class="blue" value="  5  " onClick="setNum('5'); return false;"></td>
-<td><input type="button" name="n6" class="blue" value="  6  " onClick="setNum('6'); return false;"></td>
-<td><input type="button" name="multiply" class="red" value="  *  " onClick="multi(1); return false;"></td>
-<td><input type="button" name="percent" class="blue" value=" %  " onClick="porcentaje(); return false;"></td></tr>
-<td><input type="button" name="n1" class="blue" value="  1  " onClick="setNum('1'); return false;"></td>
-<td><input type="button" name="n2" class="blue" value="  2  " onClick="setNum('2'); return false;"></td>
-<td><input type="button" name="n3" class="blue" value="  3  " onClick="setNum('3'); return false;"></td>
-<td><input type="button" name="minus" class="red" value="  -  " onClick="resta(1); return false;"></td>
-<td><input type="button" name="recip" class="blue" value="1/x " onClick="divUno(); return false;"></td></tr>
-<td><input type="button" name="n0" class="blue" value="  0  " onClick="setNum('0'); return false;"></td>
-<td><input type="button" name="negate" class="blue" value="+/- " onClick="negativo(); return false;"></td>
-<td><input type="button" name="dot" class="blue" value="  .   " onClick="setNum('.'); return false;"></td>
-<td><input type="button" name="plus" class="red" value=" +  " onClick="suma(1); return false;"></td>
-<td><input type="button" name="equal" class="red" value="  =   " onClick="igual(); return false;"></td>
+<td><input type="button" name="n7" value="  7  " onClick="setNum('7'); return false;"></td>
+<td><input type="button" name="n8" value="  8  " onClick="setNum('8'); return false;"></td>
+<td><input type="button" name="n9" value="  9  " onClick="setNum('9'); return false;"></td>
+<td><input type="button" name="divide" value="  /  " onClick="division(1); return false;"></td>
+<td><input type="button" name="sqrt" value="   √  " onClick="raiz(); return false;"></td></tr>
+<td><input type="button" name="n4" value="  4  " onClick="setNum('4'); return false;"></td>
+<td><input type="button" name="n5" value="  5  " onClick="setNum('5'); return false;"></td>
+<td><input type="button" name="n6" value="  6  " onClick="setNum('6'); return false;"></td>
+<td><input type="button" name="multiply" value="  *  " onClick="multi(1); return false;"></td>
+<td><input type="button" name="percent" value=" %  " onClick="porcentaje(); return false;"></td></tr>
+<td><input type="button" name="n1" value="  1  " onClick="setNum('1'); return false;"></td>
+<td><input type="button" name="n2" value="  2  " onClick="setNum('2'); return false;"></td>
+<td><input type="button" name="n3" value="  3  " onClick="setNum('3'); return false;"></td>
+<td><input type="button" name="minus" value="  -  " onClick="resta(); return false;"></td>
+<td><input type="button" name="recip" value="1/x " onClick="divUno(); return false;"></td></tr>
+<td><input type="button" name="n0" value="  0  " onClick="setNum('0'); return false;"></td>
+<td><input type="button" name="negate" value="+/- " onClick="negativo(); return false;"></td>
+<td><input type="button" name="dot" value="  .   " onClick="setNum('.'); return false;"></td>
+<td><input type="button" name="plus" value=" +  " onClick="suma(1); return false;"></td>
+<td><input type="button" name="equal" value="  =   " onClick="igual(); return false;"></td>
 </tr>
 </table>
 </td></tr>
@@ -53,7 +56,6 @@ name="C" class="red" value="  C  " onClick="borrado(); return false;">
 </td></tr>
 </table>
 </form>
-</center>
 
 </body>
 
