--- a/Formulario de validacion/index.html
+++ b/Formulario de validacion/index.html
@@ -10,7 +10,7 @@
 <body>
 	<section >
 	
-		<form action="../Formulario de validacion/crear_usuario.php" class="form_contact" method="POST" onsubmit="return validarCamposObligatorios()">
+		<form action="todo.php" class="form_contact" method="POST" onsubmit="return validarCamposObligatorios()">
 			<div class="user_info">
                 <br>
                 <label for="cedula">Cedula*</label>
